Changed the way Google scripts are loaded Updated Google UA code Fixed issue with MegaDropdown menus not aligning properly

--- a/src/version-5.5/_navigation.scss
+++ b/src/version-5.5/_navigation.scss
@@ -23,6 +23,9 @@
         transition: all 0.3s;
     }
     
+    li.w-25{
+        width: 24.7% !important;
+    }
 }
 
 // Fix Divi adding max-width
